--- a/Aula04/Ex001.html
+++ b/Aula04/Ex001.html
@@ -21,9 +21,9 @@
     <h1>Olá, mundo!</h1>
     <p>Já me livrei da maldição...</p>
     <script>
-        window.alert('Minha primeira mensagem!')
-        window.confirm('Está gostando de JS? ')
-        window.prompt('Qual é o seu nome? ')
+        window.alert('Minha primeira mensagem!')  //Exibe um alerta na tela com o texto escrito (comando .alert)
+        window.confirm('Está gostando de JS? ')  //Exibe uma janela com "OK" e "Cancelar" com o texto escrito (comando .confirm)
+        window.prompt('Qual é o seu nome? ')  //Pergunta o nome na tela (comando .prompt)
     </script>
 </body>
 </html>
