--- a/Aula14 Exercícios/Ex017/modelo.html
+++ b/Aula14 Exercícios/Ex017/modelo.html
@@ -4,24 +4,27 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Modelo de Exercício</title>
-    <link rel="stylesheet" href="/Aula12 Exercícios/style.css">
+    <title>Tabuada</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        <h1>Título</h1>
+        <h1>Tabuada</h1>
     </header>
     <section>
         <div>
-            Teste..
+            <p>Número: <input type="number" name="num" id="txtn">
+            <input type="button" value="Gerar Tabuada" onclick="tabuada()"></p>
         </div>
         <div>
-            Teste..
+            <select name="tabuada" id="seltab" size="10">
+                <option>Digite um número no campo acima!</option>
+            </select>
         </div>
     </section>
     <footer>
         <p>&copy; KrhystFerrari</p>
     </footer>
-    <script src="/Aula12 Exercícios/script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
